# caffe2practice

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
docs/: conv_op.md  std::shared_ptr.md
include/util/: NetUtil.h  NetUtilBase.h  NetUtilNN.h  TensorUtil.h  modelutil.h
res/: mkmnist.py  mnist-minidb.zip.1
res/leveldb/mnist-test-nchw-leveldb/: LOG
res/leveldb/mnist-train-nchw-leveldb/: LOG  MANIFEST-000009
src/: intro.cpp  mnist.cpp  rnn.cpp  testdb.cpp  toy.cpp
src/util/: CMakeLists.txt  Makefile  NetUtil.cpp  NetUtilBase.cpp  NetUtilNN.cpp  TensorUtil.cpp  cmake_install.cmake  modeldisplayoputil.cpp  modeloputil.cpp  modelutil.cpp
